Convert BarChart labels to grid to prevent text clipping

--- a/src/components/BarChart/style.module.css
+++ b/src/components/BarChart/style.module.css
@@ -28,8 +28,12 @@
   background-color: var(--fuchsia-100);
 }
 
+.labels {
+  display: grid;
+}
+
 .barLabel {
-  position: absolute;
+  /*position: absolute;*/
   transition: left 0.3s;
 }
 
